2カラムに対応

--- a/checklist.tex
+++ b/checklist.tex
@@ -1,7 +1,8 @@
-\documentclass{jsarticle}
+\documentclass[landscape,twocolumn]{jsarticle}
 \pagestyle{empty}
-\usepackage[top=1truemm,bottom=1truemm,left=1truemm,right=1truemm]{geometry}
+\usepackage[top=0.7truemm,bottom=0.7truemm,left=0.7truemm,right=0.7truemm]{geometry}
 
 \begin{document}
-\input{checklist_body}
+\twocolumn{\input{checklist_body}}
+\twocolumn{\input{checklist_body}}
 \end{document}
